--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "predev": "node bin/validate-env && node bin/check-x-login",
     "dev": "tsc-watch --noClear --onEmitDebounceMs 15000 --onSuccess \"pnpm run www-dev\"",
     "build": "tsc && pnpm run generate-types",
-    "start": "node dist/index.js",
+    "start": "nodemon src/index.js",
     "lint": "prettier --write . && eslint . --fix --config .eslintrc.json",
     "www-dev": "node bin/www-dev",
     "login-x": "node bin/check-x-login",
@@ -21,19 +21,20 @@
     "@grammyjs/conversations": "^1.2.0",
     "@ngrok/ngrok": "^1.4.1",
     "@solana/web3.js": "^1.98.0",
-    "agent-twitter-client": "^0.0.18",
     "@useorbis/db-sdk": "0.0.60-alpha",
+    "agent-twitter-client": "^0.0.18",
     "axios": "^1.7.7",
     "better-sqlite3": "^11.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "ethers": "^6.9.0",
+    "ethers": "^5.7.2",
     "express": "^4.21.1",
     "grammy": "^1.32.0",
     "http-errors": "^2.0.0",
     "jsonc-parser": "^3.3.1",
     "node-cache": "^5.1.2",
+    "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "tsc-watch": "^6.2.1"
   },
