--- a/client/package.json
+++ b/client/package.json
@@ -15,31 +15,35 @@
     "@heroui/react": "^2.6.14",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.1",
-    "@tanstack/react-query": "^5.66.0",
-    "axios": "^1.7.9",
+    "@reduxjs/toolkit": "^2.5.1",
+    "@tanstack/react-query": "^5.60.5",
+    "axios": "^1.7.7",
+    "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.0.6",
-    "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.469.0",
+    "next": "15.1.0",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "autoprefixer": "^10.4.20",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.19.0",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.2",
+    "@types/node": "^20",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.18",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "15.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "tunnelmole": "^2.3.3",
-    "typescript": "^5.7.3"
+    "tunnelmole": "^2.3.1",
+    "typescript": "^5.3.3"
   }
 }
