--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,22 @@
     "@ai16z/adapter-sqlite": "0.1.5-alpha.3",
     "@ai16z/eliza": "0.1.5-alpha.3",
     "@ai16z/plugin-bootstrap": "0.1.5-alpha.3",
+    "@coinbase/cdp-agentkit-core": "^0.0.14",
+    "@coinbase/cdp-langchain": "^0.0.15",
+    "@coinbase/coinbase-sdk": "^0.17.0",
+    "@ethersproject/hdnode": "^5.7.0",
     "@grammyjs/conversations": "^1.2.0",
+    "@langchain/langgraph": "^0.2.44",
+    "@langchain/openai": "^0.4.2",
     "@ngrok/ngrok": "^1.4.1",
+    "@privy-io/server-auth": "^1.18.4",
+    "@snapshot-labs/snapshot.js": "^0.12.45",
     "@solana/web3.js": "^1.98.0",
     "@useorbis/db-sdk": "0.0.60-alpha",
     "agent-twitter-client": "^0.0.18",
     "axios": "^1.7.7",
     "better-sqlite3": "^11.6.0",
+    "convex": "^1.18.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -35,8 +44,11 @@
     "jsonc-parser": "^3.3.1",
     "node-cache": "^5.1.2",
     "nodemon": "^3.1.9",
+    "openai": "^4.82.0",
     "prettier": "^3.4.2",
-    "tsc-watch": "^6.2.1"
+    "tsc-watch": "^6.2.1",
+    "unique-names-generator": "^4.7.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@typechain/ethers-v6": "^0.5.1",
