--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.2",
     "@heroui/react": "^2.6.14",
     "@privy-io/react-auth": "^2.2.1",
     "@privy-io/wagmi": "^1.0.2",
