--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "agent-twitter-client": "^0.0.18",
     "axios": "^1.7.7",
     "better-sqlite3": "^11.6.0",
+    "bull": "^4.16.5",
     "convex": "^1.18.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -41,11 +42,13 @@
     "express": "^4.21.1",
     "grammy": "^1.32.0",
     "http-errors": "^2.0.0",
+    "ioredis": "^5.4.2",
     "jsonc-parser": "^3.3.1",
     "node-cache": "^5.1.2",
     "nodemon": "^3.1.9",
     "openai": "^4.82.0",
     "prettier": "^3.4.2",
+    "throng": "^5.0.0",
     "tsc-watch": "^6.2.1",
     "unique-names-generator": "^4.7.1",
     "zod": "^3.24.1"
