--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.3",
     "react-redux": "^9.2.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
