--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.1",
+    "@snapshot-labs/snapshot.js": "^0.12.45",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.7",
     "boring-avatars": "^1.11.2",
