--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "ethers": "5.7.2",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.469.0",
+    "motion": "^12.4.1",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
