--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@snapshot-labs/snapshot.js": "^0.12.45",
     "@tanstack/react-query": "^5.66.0",
+    "animejs": "^3.2.2",
     "axios": "^1.7.7",
     "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
