--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-* @gitaalekhyapaul @alokt @jamesyoung
-/.github/CODEOWNERS @gitaalekhyapaul @alokt @jamesyoung
-/.github/ @gitaalekhyapaul @alokt @jamesyoung
+* @AnoyRC @Gautam25Raj @ShambaC
+/.github/CODEOWNERS @AnoyRC @Gautam25Raj @ShambaC
+/.github/ @AnoyRC @Gautam25Raj @ShambaC
