Feat: Add gemini API
Removed gaia and moved to separate branch.

--- a/server/.env.example
+++ b/server/.env.example
@@ -32,8 +32,8 @@ NAMESTONE_API_KEY=
 # Snapshot api url for getting proposal informations
 SNAPSHOT_API_URL=
 
-# Follow the instructions to run gaia node in README to get the api url
-GAIA_API_URL=
+# API key for gemini
+GEMINI_API_KEY=
 
 # Coinbase developer platform: https://www.coinbase.com/developer-platform
 CDP_API_KEY_NAME=
